# what_are_we_doing

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.pkgconfig/: fuse3.pc
tests/: _test_restore_inner.py  test_fuse_e2e.py  test_restore_integration.py  test_stress.py  test_tasks.py  test_watcher.py
wawd/: cli.py  config.py  exceptions.py  server.py  ui.py
wawd/adapters/: watch_mode.py
wawd/fs/: blob_store.py  fuse_mount.py  version_store.py  watcher.py
wawd/oracle/: context.py  oracle.py  restorer.py  session_tracker.py
wawd/oracle/backends/: base.py  llamacpp.py  ollama.py  openai_compat.py
wawd/oracle/prompts/: briefing.txt  history.txt  restoration.txt
wawd/tasks/: __init__.py  store.py
